# annatar

./: .envrc  .gitignore  .gitlab-ci.yml  Dockerfile  Dockerfile.amd64  Dockerfile.arm64  Makefile  README.md  TODO.txt  docker-compose.yaml  entrypoint.sh  main.py  pyproject.toml  pyrightconfig.json  requirements.txt  run.py  search.sh
annatar/: api.py  cache.py  config.py  human.py  instrumentation.py  jackett.py  jackett_models.py  logging.py  magnet.py  main.py  metrics.py  middleware.py  routes.py  stremio.py  torrent.py  web.py
annatar/api/: filters.py  search.py  stremio.py
annatar/api/core/: api.py  streams.py  streamsa.py
annatar/clients/: cinemeta.py  jackett.py  jackett_models.py
annatar/database/: db.py  lock.py  odm.py
annatar/database/adaptors/: aioredislite.py
annatar/db/: db.py  models.py
annatar/debrid/: alldebrid.py  alldebrid_models.py  debrid_service.py  debridlink.py  debridlink_models.py  magnet.py  offcloud_api.py  offcloud_models.py  offcloud_provider.py  pm.py  pm_models.py  premiumize_api.py  premiumize_provider.py  providers.py  rd.py  rd_models.py  real_debrid_api.py  real_debrid_provider.py
annatar/indexers/: curator.py  jackett.py
annatar/jackett/: indexer.py
annatar/meta/: cinemeta.py
annatar/pubsub/: events.py  pubsub.py
annatar/pubsub/consumers/: base_consumer.py  community_cache.py  torrent_processor.py
annatar/pubsub/consumers/torrent_search/: base_jackett_processor.py
annatar/tasks/: process_search.py  torrent_processor.py
annatar/trackers/: search.py
grima/: human.py  jackett.py  logging.py  main.py  stremio.py  torrent.py
grima/debrid/: magnet.py  pm.py  providers.py  rd.py  rd_models.py
s6/services.d/annatar/: run
s6/services.d/annatar-workers/: run
static/js/: index.js
stremio_jackett/: human.py  jackett.py  jackett_models.py  main.py  stremio.py
stremio_jackett/debrid/: models.py  pm.py  providers.py  rd.py  rd_models.py
stubs/parse_torrent_title/: __init__.pyi
templates/: branding.html.j2  configure.html.j2
tests/: test_human_score_name.py  test_torrent_score.py
tests/annatar/api/: test_search.py  test_stremio.py
tests/annatar/human/: test_match_episode.py  test_match_season_episode.py
tests/annatar/pubsub/consumers/torrent_processor/: test_process_message.py
tests/torrent/: test_score.py
typings/PTN/: __init__.pyi  extras.pyi  parse.pyi  patterns.pyi  post.pyi
typings/redislite/: __init__.pyi  client.pyi  configuration.pyi  debug.pyi  patch.pyi
