[tool.poetry]
name = "annatar"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
pydantic = "^2.5.3"
aiohttp = "^3.9.1"
uvicorn = "^0.27.0"
structlog = "^24.1.0"
redislite = "^6.2.912183"
jinja2 = "^3.1.3"
uvloop = "^0.19.0"
prometheus-client = "^0.20.0"
parse-torrent-title = "^2.8.1"
pyyaml = "^6.0.1"

[tool.poetry.group.dev.dependencies]
black = "^24.1.0"
isort = "^5.13.2"
pyright = "^1.1.348"
pytest = "^8.0.0"
pytest-watch = "^4.2.0"
types-redis = "^4.6.0.20240106"
ruff = "^0.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.black]
line-length = 100

[tool.pyright]
strict = ["annatar/*.py"]
typeCheckingMode = "strict"
reportMissingImports = true
reportUnusedVariable = true
reportUnusedFunction = true
reportUnusedImport = true

[tool.pytest.ini_options]
filterwarnings = ["ignore::UserWarning", "ignore::DeprecationWarning"]

[tool.ruff]
# Exclude a variety of commonly ignored directories.
line-length = 100
exclude = [
    ".direnv",
    ".git",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".vscode",
    "__pypackages__",
    "_build",
    "build",
    "dist",
    "typings",
    "venv",
]
