[tool.poetry]
name = "annatar"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
pydantic = "^2.5.3"
aiohttp = "^3.9.1"
uvicorn = "^0.27.0"
structlog = "^24.1.0"
redislite = "^6.2.912183"
jinja2 = "^3.1.3"
uvloop = "^0.19.0"
prometheus-client = "^0.20.0"
parse-torrent-title = "^2.8.1"
pyyaml = "^6.0.1"
ruff = "^0.2.2"
pytest-asyncio = "^0.23.5"

[tool.poetry.group.dev.dependencies]
pyright = "^1.1.348"
pytest = "^8.0.0"
types-redis = "^4.6.0.20240106"
aioresponses = "^0.7.6"
pytest-cov = "^4.1.0"
pytest-watcher = "^0.4.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100

[tool.pyright]
strict = ["annatar/*.py"]
typeCheckingMode = "strict"
reportMissingImports = true
reportUnusedVariable = true
reportUnusedFunction = true
reportUnusedImport = true


[tool.ruff]
# Exclude a variety of commonly ignored directories.
line-length = 100
exclude = [ ".direnv", ".git", ".pyenv", ".pytest_cache", ".pytype", ".ruff_cache", ".vscode", "__pypackages__", "_build", "build", "dist", "typings", "venv"]

[tool.ruff.lint]
ignore = [
  # "PLR0911", # flake8-bugbear: Found commented out code
  "PLR0913", # flask8-bugbear: Too many arguments for a method or function
  "PLR0911", # flask8-bugbear: Too many return statements
  "PLR2004", # flake8-bugbear: Magic value used in comparison
]
extend-select = [
  "I",   # isort
  "C90", # mccabe complexity
  "B",   # flake8-bugbear
  "PL",  # pycodestyle
]

[tool.ruff.lint.isort]
case-sensitive = true


[tool.pytest.ini_options]
filterwarnings = ["ignore::UserWarning", "ignore::DeprecationWarning"]
log_cli_level = "CRITICAL"
testpaths = ["tests"]
addopts = "-v --durations=0"
cache_dir = ".cache/pytest_cache"

[tool.coverage.run]
branch = true
source = ["annatar"]
command_line = "-m pytest"

[tool.coverage.report]
show_missing = true

[tool.coverage.xml]
output = "coverage.xml"
