[tool.poetry]
name = "annatar"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
pydantic = "^2.5.3"
aiohttp = "^3.9.1"
uvicorn = "^0.27.0"
structlog = "^24.1.0"
redislite = "^6.2.912183"
jinja2 = "^3.1.3"
uvloop = "^0.19.0"
prometheus-client = "^0.20.0"
parse-torrent-title = "^2.8.1"
pyyaml = "^6.0.1"
ruff = "^0.2.2"
pytest-asyncio = "^0.23.5"
levenshtein = "^0.25.0"

[tool.poetry.group.dev.dependencies]
pyright = "^1.1.348"
pytest = "^8.0.0"
types-redis = "^4.6.0.20240106"
aioresponses = "^0.7.6"
pytest-cov = "^4.1.0"
pytest-watcher = "^0.4.1"
httpx = "^0.27.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100

[tool.pyright]
strict = ["annatar/*.py"]
typeCheckingMode = "strict"
reportMissingImports = true
reportUnusedVariable = true
reportUnusedFunction = true
reportUnusedImport = true


[tool.ruff]
# Exclude a variety of commonly ignored directories.
line-length = 100
exclude = [ ".direnv", ".git", ".pyenv", ".pytest_cache", ".pytype", ".ruff_cache", ".vscode", "__pypackages__", "_build", "build", "dist", "typings", "venv"]

[tool.ruff.lint]
# https://docs.astral.sh/ruff/rules/
ignore = [
  "PLR0913", # flask8-bugbear: Too many arguments for a method or function
  "PLR0911", # flask8-bugbear: Too many return statements
  "PLR2004", # flake8-bugbear: Magic value used in comparison
  "S104", # flake8-bandit: Possible binding to all interfaces
  "S108", # flake8-bandit: Probable insecure usage of temp file/directory
  "S311", # flake8-bandit: Standard pseudo-random generators are not suitable for security/cryptographic purposes
]
extend-select = [
  "I",   # isort
  "C90", # mccabe complexity
  "B",   # flake8-bugbear
  "PL",  # pycodestyle
  "S",   # flake8-bandit
  "T10", # flake8-debugger
  "PIE", # flake8-pie
  "T20", # flake8-print
  "Q",   # flake8-quotes
  "RSE", # flake8-raise
  "RET", # flake8-return
  "SLF", # flake8-self
  "SIM", # flake8-simplify
  "ARG", # flake8-unused-arguments
]

[tool.ruff.lint.isort]
case-sensitive = true


[tool.pytest.ini_options]
filterwarnings = ["ignore::UserWarning", "ignore::DeprecationWarning"]
log_cli_level = "CRITICAL"
testpaths = ["tests", "annatar"]
addopts = "-v --durations=0 -m 'not integration'"
cache_dir = ".cache/pytest_cache"
markers = [
    "integration: mark test as an integration test to run separately."
]
